# netcap

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  netcap.toml.example
cli/: CMakeLists.txt  netcap-ctl.c
config/: CMakeLists.txt  config.h  parser.c  parser.h  validator.c  validator.h
core/: CMakeLists.txt  capture.c  capture.h  constants.h  filter.c  filter.h  ipc.c  ipc.h  log.c  log.h  pcap_writer.c  pcap_writer.h  ring.c  ring.h  str.c  str.h
docs/: configuration.md  upload.md
gui/: CMakeLists.txt
gui/macos/: CMakeLists.txt  systray.h
gui/win32/: CMakeLists.txt  systray.cpp  systray.h
package/debian/: postinst  postrm  preinst  prerm
service/: CMakeLists.txt  caps.c  caps.h  launchd.c  main.c  netcapd.service  platform.h  savefile.c  savefile.h  systemd.c  upload_queue.c  upload_queue.h  winsvc.c
tests/: CMakeLists.txt  test_auth.c  test_capture.c  test_config.c  test_filter.c  test_harness.h  test_ipc.c  test_pcap_writer.c  test_ring.c
uploader/: CMakeLists.txt  auth.c  auth.h  http_client.c  http_client.h  uploader.c  uploader.h
